# tmdb-api

./: pyproject.toml  run.py
src/: __init__.py  main.py
src/config/: config.py
src/controllers/: auth.py  movie_controller.py
src/models/: movie.py
src/routes/: route.py
