[project]
name = "tmdb-app"
version = "0.1.0"
description = ""
authors = [
    {name = "=",email = "baltaz.samuel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "tmdb_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
